k8s/01-system-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: system
  labels:
    name: system
    purpose: system-services
